// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NextMatch template matches snapshot 1`] = `
"<ipl-error-display-stub class="m-b-8"></ipl-error-display-stub>
<div data-v-d255ffee="" class="ipl-space color-dark">
  <ipl-small-toggle-stub label="translation:chooseTeamsManuallyToggle" modelvalue="false" disabled="false" data-test="choose-manually-toggle" class="m-b-4"></ipl-small-toggle-stub>
  <ipl-small-toggle-stub label="translation:showOnStreamToggle" modelvalue="true" disabled="false" data-test="show-on-stream-toggle"></ipl-small-toggle-stub>
</div>
<highlighted-match-picker-stub class="m-t-8"></highlighted-match-picker-stub>"
`;

exports[`NextMatch template matches snapshot when choosing teams manually 1`] = `
"<ipl-error-display-stub class="m-b-8"></ipl-error-display-stub>
<div data-v-d255ffee="" class="ipl-space color-dark">
  <ipl-small-toggle-stub label="translation:chooseTeamsManuallyToggle" modelvalue="true" disabled="false" data-test="choose-manually-toggle" class="m-b-4"></ipl-small-toggle-stub>
  <ipl-small-toggle-stub label="translation:showOnStreamToggle" modelvalue="true" disabled="false" data-test="show-on-stream-toggle"></ipl-small-toggle-stub>
</div>
<manual-team-picker-stub class="m-t-8"></manual-team-picker-stub>"
`;
